[metadata]
name = cmusphinx
version = 1.0.2
description = CMU Sphinx Python modules for speech processing
long_description = file: README.md
long_description_content_type = text/markdown
author = David Huggins-Daines
author_email = dhdaines@gmail.com
url = https://cmusphinx.github.io/
license = MIT
platforms = any
project_urls =
    Source  = https://github.com/cmusphinx/sphinxtrain
    Tracker = https://github.com/cmusphinx/sphinxtrain/issues
classifiers =
          Development Status :: 2 - Pre-Alpha
          Programming Language :: Python :: 3
          Programming Language :: Python :: 3.7
          License :: OSI Approved :: MIT License
          Operating System :: OS Independent
[options]
packages = cmusphinx, cmusphinx.feat
install_requires =
                 numpy
                 scipy
