EXTRA_DIST = \
	bugcase1/time.filler \
	bugcase1/time.phonelist \
	bugcase2/bug.topo \
	cp_parm/cp.ci_meanvar \
	cp_parm/means.1 \
	cp_parm/means.100 \
	cp_parm/means.12 \
	cp_parm/means.25 \
	cp_parm/means.3 \
	cp_parm/means.50 \
	cp_parm/means.6 \
	cp_parm/rm1.cpmeanvar \
	cp_parm/test_means.100.txt \
	cp_parm/test_means.12.txt \
	cp_parm/test_means.1.txt \
	cp_parm/test_means.25.txt \
	cp_parm/test_means.3.txt \
	cp_parm/test_means.50.txt \
	cp_parm/test_means.6.txt \
	init_gau/gauden_counts.1 \
	init_gau/gauden_counts.100 \
	init_gau/gauden_counts.12 \
	init_gau/gauden_counts.25 \
	init_gau/gauden_counts.3 \
	init_gau/gauden_counts.50 \
	init_gau/gauden_counts.6 \
	init_gau/gauden_counts_lda.100 \
	init_gau/test_gauden_counts.100.out \
	init_gau/test_gauden_counts.12.out \
	init_gau/test_gauden_counts.1.out \
	init_gau/test_gauden_counts.25.out \
	init_gau/test_gauden_counts.3.out \
	init_gau/test_gauden_counts.50.out \
	init_gau/test_gauden_counts.6.out \
	init_gau/test_gauden_counts_lda.100.out \
	lda_train/test_lda.100.out \
	lda_train/test_lda.50.out \
	Makefile.am \
	make_topology/1_nosk.topo \
	make_topology/1_sk.topo \
	make_topology/2_nosk.topo \
	make_topology/2_sk.topo \
	make_topology/3_nosk.topo \
	make_topology/3_sk.topo \
	make_topology/4_nosk.topo \
	make_topology/4_sk.topo \
	make_topology/5_nosk.topo \
	make_topology/5_sk.topo \
	make_topology/6_nosk.topo \
	make_topology/6_sk.topo \
	make_topology/7_nosk.topo \
	make_topology/7_sk.topo \
	mk_flat/mixw_1st_1str_1den \
	mk_flat/mixw_3st_1str_1den \
	mk_flat/mixw_5st_1str_1den \
	mk_flat/tmat_1st_1str_1den \
	mk_flat/tmat_3st_1str_1den \
	mk_flat/tmat_5st_1str_1den \
	mk_mdef_gen/1st.ci.mdef \
	mk_mdef_gen/1st.ut.mdef \
	mk_mdef_gen/2st.all.mdef \
	mk_mdef_gen/2st.ci.mdef \
	mk_mdef_gen/2st.ut.mdef \
	mk_mdef_gen/3st.ci.mdef \
	mk_mdef_gen/3st.ut.mdef \
	mk_mdef_gen/4st.ci.mdef \
	mk_mdef_gen/4st.ut.mdef \
	mk_mdef_gen/5st.ci.mdef \
	mk_mdef_gen/5st.ut.mdef \
	mk_mdef_gen/6st.ci.mdef \
	mk_mdef_gen/6st.ut.mdef \
	mk_mdef_gen/communicator.phone.cmu \
	norm/globalmean.1 \
	norm/globalmean.100 \
	norm/globalmean.12 \
	norm/globalmean.25 \
	norm/globalmean.3 \
	norm/globalmean.50 \
	norm/globalmean.6 \
	norm/test_globalmean.100.txt \
	norm/test_globalmean.12.txt \
	norm/test_globalmean.1.txt \
	norm/test_globalmean.25.txt \
	norm/test_globalmean.3.txt \
	norm/test_globalmean.50.txt \
	norm/test_globalmean.6.txt \
	printp/gauden_counts \
	printp/test_printp_gaucnt.1gau \
	printp/test_printp_lda \
	printp/test_printp_means \
	printp/test_printp_mixw \
	printp/test_printp_tmat \
	printp/test_printp_var \
	res/cmudict.0.6d \
	res/communicator.dic.cmu \
	res/communicator.dic.cmu.full \
	res/communicator.phone.cmu \
	res/feat/rm/adg0_4/sr249.mfc \
	res/feat/rm/adg0_4/st0995.mfc \
	res/feat/rm/adg0_4/st1181.mfc \
	res/feat/rm/ahh0_5/st0125.mfc \
	res/feat/rm/ahh0_5/st1281.mfc \
	res/feat/rm/apv0_3/sr414.mfc \
	res/feat/rm/bar0_7/st2019.mfc \
	res/feat/rm/bas0_4/st1392.mfc \
	res/feat/rm/bas0_4/st1867.mfc \
	res/feat/rm/bas0_4/st2032.mfc \
	res/feat/rm/bma0_4/sr042.mfc \
	res/feat/rm/bma0_4/sr482.mfc \
	res/feat/rm/bmh0_5/sr484.mfc \
	res/feat/rm/bom0_7/sr158.mfc \
	res/feat/rm/bom0_7/sr198.mfc \
	res/feat/rm/bwm0_3/st0234.mfc \
	res/feat/rm/cal0_3/st0435.mfc \
	res/feat/rm/cal0_3/st0722.mfc \
	res/feat/rm/cal0_3/st1653.mfc \
	res/feat/rm/cef0_3/sr283.mfc \
	res/feat/rm/ceg0_8/sr072.mfc \
	res/feat/rm/ceg0_8/sr432.mfc \
	res/feat/rm/cft0_4/sr218.mfc \
	res/feat/rm/cft0_4/st0040.mfc \
	res/feat/rm/cke0_3/sr208.mfc \
	res/feat/rm/cke0_3/st0529.mfc \
	res/feat/rm/cmb0_5/sr582.mfc \
	res/feat/rm/crc0_5/st0184.mfc \
	res/feat/rm/cth0_7/sr250.mfc \
	res/feat/rm/cth0_7/st1657.mfc \
	res/feat/rm/cth0_7/st1824.mfc \
	res/feat/rm/cyl0_2/sr420.mfc \
	res/feat/rm/cyl0_2/st0827.mfc \
	res/feat/rm/das0_5/sr577.mfc \
	res/feat/rm/das0_5/st0917.mfc \
	res/feat/rm/das0_5/st2091.mfc \
	res/feat/rm/djh0_3/st0078.mfc \
	res/feat/rm/djh0_3/st2140.mfc \
	res/feat/rm/dlh0_3/sr268.mfc \
	res/feat/rm/dlh0_3/st1299.mfc \
	res/feat/rm/dlh0_3/st1492.mfc \
	res/feat/rm/dlh0_3/st1861.mfc \
	res/feat/rm/dlr0_7/st1375.mfc \
	res/feat/rm/dlr1_7/sr176.mfc \
	res/feat/rm/dlr1_7/sr216.mfc \
	res/feat/rm/dmt0_2/sr179.mfc \
	res/feat/rm/dmt0_2/sr579.mfc \
	res/feat/rm/dmt0_2/st1759.mfc \
	res/feat/rm/drd0_6/sr191.mfc \
	res/feat/rm/drd0_6/st1869.mfc \
	res/feat/rm/dsc0_6/sr235.mfc \
	res/feat/rm/dsc0_6/st1882.mfc \
	res/feat/rm/ejs0_8/sr251.mfc \
	res/feat/rm/ejs0_8/st0022.mfc \
	res/feat/rm/fwk0_4/sr110.mfc \
	res/feat/rm/fwk0_4/st0487.mfc \
	res/feat/rm/gmd0_5/sr386.mfc \
	res/feat/rm/gmd0_5/st0566.mfc \
	res/feat/rm/gxp0_4/st0711.mfc \
	res/feat/rm/gxp0_4/st1894.mfc \
	res/feat/rm/hbs0_7/sr077.mfc \
	res/feat/rm/hpg0_3/sr241.mfc \
	res/feat/rm/jpg0_5/st0737.mfc \
	res/feat/rm/jrk0_6/st1943.mfc \
	res/feat/rm/jxm0_5/sr584.mfc \
	res/feat/rm/jxm0_5/st0835.mfc \
	res/feat/rm/kkh0_5/sr562.mfc \
	res/feat/rm/kkh0_5/st1980.mfc \
	res/feat/rm/lih0_5/st0092.mfc \
	res/feat/rm/ljc0_4/sr544.mfc \
	res/feat/rm/mah0_5/sr135.mfc \
	res/feat/rm/mah0_5/st1465.mfc \
	res/feat/rm/mcc0_5/st2076.mfc \
	res/feat/rm/mdm0_4/sr025.mfc \
	res/feat/rm/mdm0_4/st0655.mfc \
	res/feat/rm/mdm0_4/st1378.mfc \
	res/feat/rm/mdm0_4/st1596.mfc \
	res/feat/rm/mgk0_2/sr548.mfc \
	res/feat/rm/mju0_6/st1416.mfc \
	res/feat/rm/mmh0_2/st0971.mfc \
	res/feat/rm/mmh0_2/st1973.mfc \
	res/feat/rm/pgl0_2/sr393.mfc \
	res/feat/rm/rcg0_1/sr151.mfc \
	res/feat/rm/rcg0_1/st0769.mfc \
	res/feat/rm/rm1_train.fileids \
	res/feat/rm/rm1_train.fileids.1 \
	res/feat/rm/rm1_train.fileids.100 \
	res/feat/rm/rm1_train.fileids.12 \
	res/feat/rm/rm1_train.fileids.25 \
	res/feat/rm/rm1_train.fileids.3 \
	res/feat/rm/rm1_train.fileids.50 \
	res/feat/rm/rm1_train.fileids.6 \
	res/feat/rm/rws0_1/sr061.mfc \
	res/feat/rm/sdc0_5/sr507.mfc \
	res/feat/rm/sdc0_5/st0568.mfc \
	res/feat/rm/tlb0_3/sr352.mfc \
	res/feat/rm/tlb0_3/st0946.mfc \
	res/feat/rm/tlb0_3/st1146.mfc \
	res/feat/rm/tlb0_3/st1308.mfc \
	res/feat/rm/tlb0_3/st1395.mfc \
	res/feat/rm/utb0_5/sr013.mfc \
	res/feat/rm/utb0_5/st0024.mfc \
	res/feat/rm/utb0_5/st1191.mfc \
	res/feat/rm/utb0_5/st2001.mfc \
	res/feat/rm/vlo0_5/st0913.mfc \
	res/feat/rm/vlo0_5/st1008.mfc \
	res/feat/rm/wem0_5/st1285.mfc \
	res/feat/rm/wem0_5/st1480.mfc \
	res/hmm/CFS3.untied.mdef \
	res/hmm/means \
	res/hmm/mixture_weights \
	res/hmm/README \
	res/hmm/RM.1000.mdef \
	res/hmm/RM.ci.mdef \
	res/hmm/RM.lda \
	res/hmm/transition_matrices \
	res/hmm/variances \
	res/linguistic_questions \
	res/stseg/rm/adg0_4/sr249.v8_seg \
	res/stseg/rm/adg0_4/st0995.v8_seg \
	res/stseg/rm/adg0_4/st1181.v8_seg \
	res/stseg/rm/ahh0_5/st0125.v8_seg \
	res/stseg/rm/ahh0_5/st1281.v8_seg \
	res/stseg/rm/apv0_3/sr414.v8_seg \
	res/stseg/rm/bar0_7/st2019.v8_seg \
	res/stseg/rm/bas0_4/st1392.v8_seg \
	res/stseg/rm/bas0_4/st1867.v8_seg \
	res/stseg/rm/bas0_4/st2032.v8_seg \
	res/stseg/rm/bma0_4/sr042.v8_seg \
	res/stseg/rm/bma0_4/sr482.v8_seg \
	res/stseg/rm/bmh0_5/sr484.v8_seg \
	res/stseg/rm/bom0_7/sr158.v8_seg \
	res/stseg/rm/bom0_7/sr198.v8_seg \
	res/stseg/rm/bwm0_3/st0234.v8_seg \
	res/stseg/rm/cal0_3/st0435.v8_seg \
	res/stseg/rm/cal0_3/st0722.v8_seg \
	res/stseg/rm/cal0_3/st1653.v8_seg \
	res/stseg/rm/cef0_3/sr283.v8_seg \
	res/stseg/rm/ceg0_8/sr072.v8_seg \
	res/stseg/rm/ceg0_8/sr432.v8_seg \
	res/stseg/rm/cft0_4/sr218.v8_seg \
	res/stseg/rm/cft0_4/st0040.v8_seg \
	res/stseg/rm/cke0_3/sr208.v8_seg \
	res/stseg/rm/cke0_3/st0529.v8_seg \
	res/stseg/rm/cmb0_5/sr582.v8_seg \
	res/stseg/rm/crc0_5/st0184.v8_seg \
	res/stseg/rm/cth0_7/sr250.v8_seg \
	res/stseg/rm/cth0_7/st1657.v8_seg \
	res/stseg/rm/cth0_7/st1824.v8_seg \
	res/stseg/rm/cyl0_2/sr420.v8_seg \
	res/stseg/rm/cyl0_2/st0827.v8_seg \
	res/stseg/rm/das0_5/sr577.v8_seg \
	res/stseg/rm/das0_5/st0917.v8_seg \
	res/stseg/rm/das0_5/st2091.v8_seg \
	res/stseg/rm/djh0_3/st0078.v8_seg \
	res/stseg/rm/djh0_3/st2140.v8_seg \
	res/stseg/rm/dlh0_3/sr268.v8_seg \
	res/stseg/rm/dlh0_3/st1299.v8_seg \
	res/stseg/rm/dlh0_3/st1492.v8_seg \
	res/stseg/rm/dlh0_3/st1861.v8_seg \
	res/stseg/rm/dlr0_7/st1375.v8_seg \
	res/stseg/rm/dlr1_7/sr176.v8_seg \
	res/stseg/rm/dlr1_7/sr216.v8_seg \
	res/stseg/rm/dmt0_2/sr179.v8_seg \
	res/stseg/rm/dmt0_2/sr579.v8_seg \
	res/stseg/rm/dmt0_2/st1759.v8_seg \
	res/stseg/rm/drd0_6/sr191.v8_seg \
	res/stseg/rm/drd0_6/st1869.v8_seg \
	res/stseg/rm/dsc0_6/sr235.v8_seg \
	res/stseg/rm/dsc0_6/st1882.v8_seg \
	res/stseg/rm/ejs0_8/sr251.v8_seg \
	res/stseg/rm/ejs0_8/st0022.v8_seg \
	res/stseg/rm/fwk0_4/sr110.v8_seg \
	res/stseg/rm/fwk0_4/st0487.v8_seg \
	res/stseg/rm/gmd0_5/sr386.v8_seg \
	res/stseg/rm/gmd0_5/st0566.v8_seg \
	res/stseg/rm/gxp0_4/st0711.v8_seg \
	res/stseg/rm/gxp0_4/st1894.v8_seg \
	res/stseg/rm/hbs0_7/sr077.v8_seg \
	res/stseg/rm/hpg0_3/sr241.v8_seg \
	res/stseg/rm/jpg0_5/st0737.v8_seg \
	res/stseg/rm/jrk0_6/st1943.v8_seg \
	res/stseg/rm/jxm0_5/sr584.v8_seg \
	res/stseg/rm/jxm0_5/st0835.v8_seg \
	res/stseg/rm/kkh0_5/sr562.v8_seg \
	res/stseg/rm/kkh0_5/st1980.v8_seg \
	res/stseg/rm/lih0_5/st0092.v8_seg \
	res/stseg/rm/ljc0_4/sr544.v8_seg \
	res/stseg/rm/mah0_5/sr135.v8_seg \
	res/stseg/rm/mah0_5/st1465.v8_seg \
	res/stseg/rm/mcc0_5/st2076.v8_seg \
	res/stseg/rm/mdm0_4/sr025.v8_seg \
	res/stseg/rm/mdm0_4/st0655.v8_seg \
	res/stseg/rm/mdm0_4/st1378.v8_seg \
	res/stseg/rm/mdm0_4/st1596.v8_seg \
	res/stseg/rm/mgk0_2/sr548.v8_seg \
	res/stseg/rm/mju0_6/st1416.v8_seg \
	res/stseg/rm/mmh0_2/st0971.v8_seg \
	res/stseg/rm/mmh0_2/st1973.v8_seg \
	res/stseg/rm/pgl0_2/sr393.v8_seg \
	res/stseg/rm/rcg0_1/sr151.v8_seg \
	res/stseg/rm/rcg0_1/st0769.v8_seg \
	res/stseg/rm/rws0_1/sr061.v8_seg \
	res/stseg/rm/sdc0_5/sr507.v8_seg \
	res/stseg/rm/sdc0_5/st0568.v8_seg \
	res/stseg/rm/tlb0_3/sr352.v8_seg \
	res/stseg/rm/tlb0_3/st0946.v8_seg \
	res/stseg/rm/tlb0_3/st1146.v8_seg \
	res/stseg/rm/tlb0_3/st1308.v8_seg \
	res/stseg/rm/tlb0_3/st1395.v8_seg \
	res/stseg/rm/utb0_5/sr013.v8_seg \
	res/stseg/rm/utb0_5/st0024.v8_seg \
	res/stseg/rm/utb0_5/st1191.v8_seg \
	res/stseg/rm/utb0_5/st2001.v8_seg \
	res/stseg/rm/vlo0_5/st0913.v8_seg \
	res/stseg/rm/vlo0_5/st1008.v8_seg \
	res/stseg/rm/wem0_5/st1285.v8_seg \
	res/stseg/rm/wem0_5/st1480.v8_seg \
	res/training.trans.falign.1of10 \
	res/trees/CFS3.100/AA-0.dtree \
	res/trees/CFS3.100/AA-1.dtree \
	res/trees/CFS3.100/AA-2.dtree \
	res/trees/CFS3.100/AE-0.dtree \
	res/trees/CFS3.100/AE-1.dtree \
	res/trees/CFS3.100/AE-2.dtree \
	res/trees/CFS3.100/AH-0.dtree \
	res/trees/CFS3.100/AH-1.dtree \
	res/trees/CFS3.100/AH-2.dtree \
	res/trees/CFS3.100/AO-0.dtree \
	res/trees/CFS3.100/AO-1.dtree \
	res/trees/CFS3.100/AO-2.dtree \
	res/trees/CFS3.100/AW-0.dtree \
	res/trees/CFS3.100/AW-1.dtree \
	res/trees/CFS3.100/AW-2.dtree \
	res/trees/CFS3.100/AX-0.dtree \
	res/trees/CFS3.100/AX-1.dtree \
	res/trees/CFS3.100/AX-2.dtree \
	res/trees/CFS3.100/AXR-0.dtree \
	res/trees/CFS3.100/AXR-1.dtree \
	res/trees/CFS3.100/AXR-2.dtree \
	res/trees/CFS3.100/AY-0.dtree \
	res/trees/CFS3.100/AY-1.dtree \
	res/trees/CFS3.100/AY-2.dtree \
	res/trees/CFS3.100/B-0.dtree \
	res/trees/CFS3.100/B-1.dtree \
	res/trees/CFS3.100/B-2.dtree \
	res/trees/CFS3.100/CH-0.dtree \
	res/trees/CFS3.100/CH-1.dtree \
	res/trees/CFS3.100/CH-2.dtree \
	res/trees/CFS3.100/D-0.dtree \
	res/trees/CFS3.100/D-1.dtree \
	res/trees/CFS3.100/D-2.dtree \
	res/trees/CFS3.100/DH-0.dtree \
	res/trees/CFS3.100/DH-1.dtree \
	res/trees/CFS3.100/DH-2.dtree \
	res/trees/CFS3.100/DX-0.dtree \
	res/trees/CFS3.100/DX-1.dtree \
	res/trees/CFS3.100/DX-2.dtree \
	res/trees/CFS3.100/EH-0.dtree \
	res/trees/CFS3.100/EH-1.dtree \
	res/trees/CFS3.100/EH-2.dtree \
	res/trees/CFS3.100/ER-0.dtree \
	res/trees/CFS3.100/ER-1.dtree \
	res/trees/CFS3.100/ER-2.dtree \
	res/trees/CFS3.100/EY-0.dtree \
	res/trees/CFS3.100/EY-1.dtree \
	res/trees/CFS3.100/EY-2.dtree \
	res/trees/CFS3.100/F-0.dtree \
	res/trees/CFS3.100/F-1.dtree \
	res/trees/CFS3.100/F-2.dtree \
	res/trees/CFS3.100/G-0.dtree \
	res/trees/CFS3.100/G-1.dtree \
	res/trees/CFS3.100/G-2.dtree \
	res/trees/CFS3.100/HH-0.dtree \
	res/trees/CFS3.100/HH-1.dtree \
	res/trees/CFS3.100/HH-2.dtree \
	res/trees/CFS3.100/IH-0.dtree \
	res/trees/CFS3.100/IH-1.dtree \
	res/trees/CFS3.100/IH-2.dtree \
	res/trees/CFS3.100/IY-0.dtree \
	res/trees/CFS3.100/IY-1.dtree \
	res/trees/CFS3.100/IY-2.dtree \
	res/trees/CFS3.100/JH-0.dtree \
	res/trees/CFS3.100/JH-1.dtree \
	res/trees/CFS3.100/JH-2.dtree \
	res/trees/CFS3.100/K-0.dtree \
	res/trees/CFS3.100/K-1.dtree \
	res/trees/CFS3.100/K-2.dtree \
	res/trees/CFS3.100/L-0.dtree \
	res/trees/CFS3.100/L-1.dtree \
	res/trees/CFS3.100/L-2.dtree \
	res/trees/CFS3.100/M-0.dtree \
	res/trees/CFS3.100/M-1.dtree \
	res/trees/CFS3.100/M-2.dtree \
	res/trees/CFS3.100/N-0.dtree \
	res/trees/CFS3.100/N-1.dtree \
	res/trees/CFS3.100/N-2.dtree \
	res/trees/CFS3.100/NG-0.dtree \
	res/trees/CFS3.100/NG-1.dtree \
	res/trees/CFS3.100/NG-2.dtree \
	res/trees/CFS3.100/OW-0.dtree \
	res/trees/CFS3.100/OW-1.dtree \
	res/trees/CFS3.100/OW-2.dtree \
	res/trees/CFS3.100/OY-0.dtree \
	res/trees/CFS3.100/OY-1.dtree \
	res/trees/CFS3.100/OY-2.dtree \
	res/trees/CFS3.100/P-0.dtree \
	res/trees/CFS3.100/P-1.dtree \
	res/trees/CFS3.100/P-2.dtree \
	res/trees/CFS3.100/R-0.dtree \
	res/trees/CFS3.100/R-1.dtree \
	res/trees/CFS3.100/R-2.dtree \
	res/trees/CFS3.100/S-0.dtree \
	res/trees/CFS3.100/S-1.dtree \
	res/trees/CFS3.100/S-2.dtree \
	res/trees/CFS3.100/SH-0.dtree \
	res/trees/CFS3.100/SH-1.dtree \
	res/trees/CFS3.100/SH-2.dtree \
	res/trees/CFS3.100/T-0.dtree \
	res/trees/CFS3.100/T-1.dtree \
	res/trees/CFS3.100/T-2.dtree \
	res/trees/CFS3.100/TH-0.dtree \
	res/trees/CFS3.100/TH-1.dtree \
	res/trees/CFS3.100/TH-2.dtree \
	res/trees/CFS3.100/TS-0.dtree \
	res/trees/CFS3.100/TS-1.dtree \
	res/trees/CFS3.100/TS-2.dtree \
	res/trees/CFS3.100/UH-0.dtree \
	res/trees/CFS3.100/UH-1.dtree \
	res/trees/CFS3.100/UH-2.dtree \
	res/trees/CFS3.100/UW-0.dtree \
	res/trees/CFS3.100/UW-1.dtree \
	res/trees/CFS3.100/UW-2.dtree \
	res/trees/CFS3.100/V-0.dtree \
	res/trees/CFS3.100/V-1.dtree \
	res/trees/CFS3.100/V-2.dtree \
	res/trees/CFS3.100/W-0.dtree \
	res/trees/CFS3.100/W-1.dtree \
	res/trees/CFS3.100/W-2.dtree \
	res/trees/CFS3.100/Y-0.dtree \
	res/trees/CFS3.100/Y-1.dtree \
	res/trees/CFS3.100/Y-2.dtree \
	res/trees/CFS3.100/Z-0.dtree \
	res/trees/CFS3.100/Z-1.dtree \
	res/trees/CFS3.100/Z-2.dtree \
	res/trees/CFS3.100/ZH-0.dtree \
	res/trees/CFS3.100/ZH-1.dtree \
	res/trees/CFS3.100/ZH-2.dtree \
	res/trees/CFS3.2000/AA-0.dtree \
	res/trees/CFS3.2000/AA-1.dtree \
	res/trees/CFS3.2000/AA-2.dtree \
	res/trees/CFS3.2000/AE-0.dtree \
	res/trees/CFS3.2000/AE-1.dtree \
	res/trees/CFS3.2000/AE-2.dtree \
	res/trees/CFS3.2000/AH-0.dtree \
	res/trees/CFS3.2000/AH-1.dtree \
	res/trees/CFS3.2000/AH-2.dtree \
	res/trees/CFS3.2000/AO-0.dtree \
	res/trees/CFS3.2000/AO-1.dtree \
	res/trees/CFS3.2000/AO-2.dtree \
	res/trees/CFS3.2000/AW-0.dtree \
	res/trees/CFS3.2000/AW-1.dtree \
	res/trees/CFS3.2000/AW-2.dtree \
	res/trees/CFS3.2000/AX-0.dtree \
	res/trees/CFS3.2000/AX-1.dtree \
	res/trees/CFS3.2000/AX-2.dtree \
	res/trees/CFS3.2000/AXR-0.dtree \
	res/trees/CFS3.2000/AXR-1.dtree \
	res/trees/CFS3.2000/AXR-2.dtree \
	res/trees/CFS3.2000/AY-0.dtree \
	res/trees/CFS3.2000/AY-1.dtree \
	res/trees/CFS3.2000/AY-2.dtree \
	res/trees/CFS3.2000/B-0.dtree \
	res/trees/CFS3.2000/B-1.dtree \
	res/trees/CFS3.2000/B-2.dtree \
	res/trees/CFS3.2000/CH-0.dtree \
	res/trees/CFS3.2000/CH-1.dtree \
	res/trees/CFS3.2000/CH-2.dtree \
	res/trees/CFS3.2000/D-0.dtree \
	res/trees/CFS3.2000/D-1.dtree \
	res/trees/CFS3.2000/D-2.dtree \
	res/trees/CFS3.2000/DH-0.dtree \
	res/trees/CFS3.2000/DH-1.dtree \
	res/trees/CFS3.2000/DH-2.dtree \
	res/trees/CFS3.2000/DX-0.dtree \
	res/trees/CFS3.2000/DX-1.dtree \
	res/trees/CFS3.2000/DX-2.dtree \
	res/trees/CFS3.2000/EH-0.dtree \
	res/trees/CFS3.2000/EH-1.dtree \
	res/trees/CFS3.2000/EH-2.dtree \
	res/trees/CFS3.2000/ER-0.dtree \
	res/trees/CFS3.2000/ER-1.dtree \
	res/trees/CFS3.2000/ER-2.dtree \
	res/trees/CFS3.2000/EY-0.dtree \
	res/trees/CFS3.2000/EY-1.dtree \
	res/trees/CFS3.2000/EY-2.dtree \
	res/trees/CFS3.2000/F-0.dtree \
	res/trees/CFS3.2000/F-1.dtree \
	res/trees/CFS3.2000/F-2.dtree \
	res/trees/CFS3.2000/G-0.dtree \
	res/trees/CFS3.2000/G-1.dtree \
	res/trees/CFS3.2000/G-2.dtree \
	res/trees/CFS3.2000/HH-0.dtree \
	res/trees/CFS3.2000/HH-1.dtree \
	res/trees/CFS3.2000/HH-2.dtree \
	res/trees/CFS3.2000/IH-0.dtree \
	res/trees/CFS3.2000/IH-1.dtree \
	res/trees/CFS3.2000/IH-2.dtree \
	res/trees/CFS3.2000/IY-0.dtree \
	res/trees/CFS3.2000/IY-1.dtree \
	res/trees/CFS3.2000/IY-2.dtree \
	res/trees/CFS3.2000/JH-0.dtree \
	res/trees/CFS3.2000/JH-1.dtree \
	res/trees/CFS3.2000/JH-2.dtree \
	res/trees/CFS3.2000/K-0.dtree \
	res/trees/CFS3.2000/K-1.dtree \
	res/trees/CFS3.2000/K-2.dtree \
	res/trees/CFS3.2000/L-0.dtree \
	res/trees/CFS3.2000/L-1.dtree \
	res/trees/CFS3.2000/L-2.dtree \
	res/trees/CFS3.2000/M-0.dtree \
	res/trees/CFS3.2000/M-1.dtree \
	res/trees/CFS3.2000/M-2.dtree \
	res/trees/CFS3.2000/N-0.dtree \
	res/trees/CFS3.2000/N-1.dtree \
	res/trees/CFS3.2000/N-2.dtree \
	res/trees/CFS3.2000/NG-0.dtree \
	res/trees/CFS3.2000/NG-1.dtree \
	res/trees/CFS3.2000/NG-2.dtree \
	res/trees/CFS3.2000/OW-0.dtree \
	res/trees/CFS3.2000/OW-1.dtree \
	res/trees/CFS3.2000/OW-2.dtree \
	res/trees/CFS3.2000/OY-0.dtree \
	res/trees/CFS3.2000/OY-1.dtree \
	res/trees/CFS3.2000/OY-2.dtree \
	res/trees/CFS3.2000/P-0.dtree \
	res/trees/CFS3.2000/P-1.dtree \
	res/trees/CFS3.2000/P-2.dtree \
	res/trees/CFS3.2000/R-0.dtree \
	res/trees/CFS3.2000/R-1.dtree \
	res/trees/CFS3.2000/R-2.dtree \
	res/trees/CFS3.2000/S-0.dtree \
	res/trees/CFS3.2000/S-1.dtree \
	res/trees/CFS3.2000/S-2.dtree \
	res/trees/CFS3.2000/SH-0.dtree \
	res/trees/CFS3.2000/SH-1.dtree \
	res/trees/CFS3.2000/SH-2.dtree \
	res/trees/CFS3.2000/T-0.dtree \
	res/trees/CFS3.2000/T-1.dtree \
	res/trees/CFS3.2000/T-2.dtree \
	res/trees/CFS3.2000/TH-0.dtree \
	res/trees/CFS3.2000/TH-1.dtree \
	res/trees/CFS3.2000/TH-2.dtree \
	res/trees/CFS3.2000/TS-0.dtree \
	res/trees/CFS3.2000/TS-1.dtree \
	res/trees/CFS3.2000/TS-2.dtree \
	res/trees/CFS3.2000/UH-0.dtree \
	res/trees/CFS3.2000/UH-1.dtree \
	res/trees/CFS3.2000/UH-2.dtree \
	res/trees/CFS3.2000/UW-0.dtree \
	res/trees/CFS3.2000/UW-1.dtree \
	res/trees/CFS3.2000/UW-2.dtree \
	res/trees/CFS3.2000/V-0.dtree \
	res/trees/CFS3.2000/V-1.dtree \
	res/trees/CFS3.2000/V-2.dtree \
	res/trees/CFS3.2000/W-0.dtree \
	res/trees/CFS3.2000/W-1.dtree \
	res/trees/CFS3.2000/W-2.dtree \
	res/trees/CFS3.2000/Y-0.dtree \
	res/trees/CFS3.2000/Y-1.dtree \
	res/trees/CFS3.2000/Y-2.dtree \
	res/trees/CFS3.2000/Z-0.dtree \
	res/trees/CFS3.2000/Z-1.dtree \
	res/trees/CFS3.2000/Z-2.dtree \
	res/trees/CFS3.2000/ZH-0.dtree \
	res/trees/CFS3.2000/ZH-1.dtree \
	res/trees/CFS3.2000/ZH-2.dtree \
	res/trees/CFS3.500/AA-0.dtree \
	res/trees/CFS3.500/AA-1.dtree \
	res/trees/CFS3.500/AA-2.dtree \
	res/trees/CFS3.500/AE-0.dtree \
	res/trees/CFS3.500/AE-1.dtree \
	res/trees/CFS3.500/AE-2.dtree \
	res/trees/CFS3.500/AH-0.dtree \
	res/trees/CFS3.500/AH-1.dtree \
	res/trees/CFS3.500/AH-2.dtree \
	res/trees/CFS3.500/AO-0.dtree \
	res/trees/CFS3.500/AO-1.dtree \
	res/trees/CFS3.500/AO-2.dtree \
	res/trees/CFS3.500/AW-0.dtree \
	res/trees/CFS3.500/AW-1.dtree \
	res/trees/CFS3.500/AW-2.dtree \
	res/trees/CFS3.500/AX-0.dtree \
	res/trees/CFS3.500/AX-1.dtree \
	res/trees/CFS3.500/AX-2.dtree \
	res/trees/CFS3.500/AXR-0.dtree \
	res/trees/CFS3.500/AXR-1.dtree \
	res/trees/CFS3.500/AXR-2.dtree \
	res/trees/CFS3.500/AY-0.dtree \
	res/trees/CFS3.500/AY-1.dtree \
	res/trees/CFS3.500/AY-2.dtree \
	res/trees/CFS3.500/B-0.dtree \
	res/trees/CFS3.500/B-1.dtree \
	res/trees/CFS3.500/B-2.dtree \
	res/trees/CFS3.500/CH-0.dtree \
	res/trees/CFS3.500/CH-1.dtree \
	res/trees/CFS3.500/CH-2.dtree \
	res/trees/CFS3.500/D-0.dtree \
	res/trees/CFS3.500/D-1.dtree \
	res/trees/CFS3.500/D-2.dtree \
	res/trees/CFS3.500/DH-0.dtree \
	res/trees/CFS3.500/DH-1.dtree \
	res/trees/CFS3.500/DH-2.dtree \
	res/trees/CFS3.500/DX-0.dtree \
	res/trees/CFS3.500/DX-1.dtree \
	res/trees/CFS3.500/DX-2.dtree \
	res/trees/CFS3.500/EH-0.dtree \
	res/trees/CFS3.500/EH-1.dtree \
	res/trees/CFS3.500/EH-2.dtree \
	res/trees/CFS3.500/ER-0.dtree \
	res/trees/CFS3.500/ER-1.dtree \
	res/trees/CFS3.500/ER-2.dtree \
	res/trees/CFS3.500/EY-0.dtree \
	res/trees/CFS3.500/EY-1.dtree \
	res/trees/CFS3.500/EY-2.dtree \
	res/trees/CFS3.500/F-0.dtree \
	res/trees/CFS3.500/F-1.dtree \
	res/trees/CFS3.500/F-2.dtree \
	res/trees/CFS3.500/G-0.dtree \
	res/trees/CFS3.500/G-1.dtree \
	res/trees/CFS3.500/G-2.dtree \
	res/trees/CFS3.500/HH-0.dtree \
	res/trees/CFS3.500/HH-1.dtree \
	res/trees/CFS3.500/HH-2.dtree \
	res/trees/CFS3.500/IH-0.dtree \
	res/trees/CFS3.500/IH-1.dtree \
	res/trees/CFS3.500/IH-2.dtree \
	res/trees/CFS3.500/IY-0.dtree \
	res/trees/CFS3.500/IY-1.dtree \
	res/trees/CFS3.500/IY-2.dtree \
	res/trees/CFS3.500/JH-0.dtree \
	res/trees/CFS3.500/JH-1.dtree \
	res/trees/CFS3.500/JH-2.dtree \
	res/trees/CFS3.500/K-0.dtree \
	res/trees/CFS3.500/K-1.dtree \
	res/trees/CFS3.500/K-2.dtree \
	res/trees/CFS3.500/L-0.dtree \
	res/trees/CFS3.500/L-1.dtree \
	res/trees/CFS3.500/L-2.dtree \
	res/trees/CFS3.500/M-0.dtree \
	res/trees/CFS3.500/M-1.dtree \
	res/trees/CFS3.500/M-2.dtree \
	res/trees/CFS3.500/N-0.dtree \
	res/trees/CFS3.500/N-1.dtree \
	res/trees/CFS3.500/N-2.dtree \
	res/trees/CFS3.500/NG-0.dtree \
	res/trees/CFS3.500/NG-1.dtree \
	res/trees/CFS3.500/NG-2.dtree \
	res/trees/CFS3.500/OW-0.dtree \
	res/trees/CFS3.500/OW-1.dtree \
	res/trees/CFS3.500/OW-2.dtree \
	res/trees/CFS3.500/OY-0.dtree \
	res/trees/CFS3.500/OY-1.dtree \
	res/trees/CFS3.500/OY-2.dtree \
	res/trees/CFS3.500/P-0.dtree \
	res/trees/CFS3.500/P-1.dtree \
	res/trees/CFS3.500/P-2.dtree \
	res/trees/CFS3.500/R-0.dtree \
	res/trees/CFS3.500/R-1.dtree \
	res/trees/CFS3.500/R-2.dtree \
	res/trees/CFS3.500/S-0.dtree \
	res/trees/CFS3.500/S-1.dtree \
	res/trees/CFS3.500/S-2.dtree \
	res/trees/CFS3.500/SH-0.dtree \
	res/trees/CFS3.500/SH-1.dtree \
	res/trees/CFS3.500/SH-2.dtree \
	res/trees/CFS3.500/T-0.dtree \
	res/trees/CFS3.500/T-1.dtree \
	res/trees/CFS3.500/T-2.dtree \
	res/trees/CFS3.500/TH-0.dtree \
	res/trees/CFS3.500/TH-1.dtree \
	res/trees/CFS3.500/TH-2.dtree \
	res/trees/CFS3.500/TS-0.dtree \
	res/trees/CFS3.500/TS-1.dtree \
	res/trees/CFS3.500/TS-2.dtree \
	res/trees/CFS3.500/UH-0.dtree \
	res/trees/CFS3.500/UH-1.dtree \
	res/trees/CFS3.500/UH-2.dtree \
	res/trees/CFS3.500/UW-0.dtree \
	res/trees/CFS3.500/UW-1.dtree \
	res/trees/CFS3.500/UW-2.dtree \
	res/trees/CFS3.500/V-0.dtree \
	res/trees/CFS3.500/V-1.dtree \
	res/trees/CFS3.500/V-2.dtree \
	res/trees/CFS3.500/W-0.dtree \
	res/trees/CFS3.500/W-1.dtree \
	res/trees/CFS3.500/W-2.dtree \
	res/trees/CFS3.500/Y-0.dtree \
	res/trees/CFS3.500/Y-1.dtree \
	res/trees/CFS3.500/Y-2.dtree \
	res/trees/CFS3.500/Z-0.dtree \
	res/trees/CFS3.500/Z-1.dtree \
	res/trees/CFS3.500/Z-2.dtree \
	res/trees/CFS3.500/ZH-0.dtree \
	res/trees/CFS3.500/ZH-1.dtree \
	res/trees/CFS3.500/ZH-2.dtree \
	res/trees/CFS3.unpruned/AA-0.dtree \
	res/trees/CFS3.unpruned/AA-1.dtree \
	res/trees/CFS3.unpruned/AA-2.dtree \
	res/trees/CFS3.unpruned/AE-0.dtree \
	res/trees/CFS3.unpruned/AE-1.dtree \
	res/trees/CFS3.unpruned/AE-2.dtree \
	res/trees/CFS3.unpruned/AH-0.dtree \
	res/trees/CFS3.unpruned/AH-1.dtree \
	res/trees/CFS3.unpruned/AH-2.dtree \
	res/trees/CFS3.unpruned/AO-0.dtree \
	res/trees/CFS3.unpruned/AO-1.dtree \
	res/trees/CFS3.unpruned/AO-2.dtree \
	res/trees/CFS3.unpruned/AW-0.dtree \
	res/trees/CFS3.unpruned/AW-1.dtree \
	res/trees/CFS3.unpruned/AW-2.dtree \
	res/trees/CFS3.unpruned/AX-0.dtree \
	res/trees/CFS3.unpruned/AX-1.dtree \
	res/trees/CFS3.unpruned/AX-2.dtree \
	res/trees/CFS3.unpruned/AXR-0.dtree \
	res/trees/CFS3.unpruned/AXR-1.dtree \
	res/trees/CFS3.unpruned/AXR-2.dtree \
	res/trees/CFS3.unpruned/AY-0.dtree \
	res/trees/CFS3.unpruned/AY-1.dtree \
	res/trees/CFS3.unpruned/AY-2.dtree \
	res/trees/CFS3.unpruned/B-0.dtree \
	res/trees/CFS3.unpruned/B-1.dtree \
	res/trees/CFS3.unpruned/B-2.dtree \
	res/trees/CFS3.unpruned/CH-0.dtree \
	res/trees/CFS3.unpruned/CH-1.dtree \
	res/trees/CFS3.unpruned/CH-2.dtree \
	res/trees/CFS3.unpruned/D-0.dtree \
	res/trees/CFS3.unpruned/D-1.dtree \
	res/trees/CFS3.unpruned/D-2.dtree \
	res/trees/CFS3.unpruned/DH-0.dtree \
	res/trees/CFS3.unpruned/DH-1.dtree \
	res/trees/CFS3.unpruned/DH-2.dtree \
	res/trees/CFS3.unpruned/DX-0.dtree \
	res/trees/CFS3.unpruned/DX-1.dtree \
	res/trees/CFS3.unpruned/DX-2.dtree \
	res/trees/CFS3.unpruned/EH-0.dtree \
	res/trees/CFS3.unpruned/EH-1.dtree \
	res/trees/CFS3.unpruned/EH-2.dtree \
	res/trees/CFS3.unpruned/ER-0.dtree \
	res/trees/CFS3.unpruned/ER-1.dtree \
	res/trees/CFS3.unpruned/ER-2.dtree \
	res/trees/CFS3.unpruned/EY-0.dtree \
	res/trees/CFS3.unpruned/EY-1.dtree \
	res/trees/CFS3.unpruned/EY-2.dtree \
	res/trees/CFS3.unpruned/F-0.dtree \
	res/trees/CFS3.unpruned/F-1.dtree \
	res/trees/CFS3.unpruned/F-2.dtree \
	res/trees/CFS3.unpruned/G-0.dtree \
	res/trees/CFS3.unpruned/G-1.dtree \
	res/trees/CFS3.unpruned/G-2.dtree \
	res/trees/CFS3.unpruned/HH-0.dtree \
	res/trees/CFS3.unpruned/HH-1.dtree \
	res/trees/CFS3.unpruned/HH-2.dtree \
	res/trees/CFS3.unpruned/IH-0.dtree \
	res/trees/CFS3.unpruned/IH-1.dtree \
	res/trees/CFS3.unpruned/IH-2.dtree \
	res/trees/CFS3.unpruned/IY-0.dtree \
	res/trees/CFS3.unpruned/IY-1.dtree \
	res/trees/CFS3.unpruned/IY-2.dtree \
	res/trees/CFS3.unpruned/JH-0.dtree \
	res/trees/CFS3.unpruned/JH-1.dtree \
	res/trees/CFS3.unpruned/JH-2.dtree \
	res/trees/CFS3.unpruned/K-0.dtree \
	res/trees/CFS3.unpruned/K-1.dtree \
	res/trees/CFS3.unpruned/K-2.dtree \
	res/trees/CFS3.unpruned/L-0.dtree \
	res/trees/CFS3.unpruned/L-1.dtree \
	res/trees/CFS3.unpruned/L-2.dtree \
	res/trees/CFS3.unpruned/M-0.dtree \
	res/trees/CFS3.unpruned/M-1.dtree \
	res/trees/CFS3.unpruned/M-2.dtree \
	res/trees/CFS3.unpruned/N-0.dtree \
	res/trees/CFS3.unpruned/N-1.dtree \
	res/trees/CFS3.unpruned/N-2.dtree \
	res/trees/CFS3.unpruned/NG-0.dtree \
	res/trees/CFS3.unpruned/NG-1.dtree \
	res/trees/CFS3.unpruned/NG-2.dtree \
	res/trees/CFS3.unpruned/OW-0.dtree \
	res/trees/CFS3.unpruned/OW-1.dtree \
	res/trees/CFS3.unpruned/OW-2.dtree \
	res/trees/CFS3.unpruned/OY-0.dtree \
	res/trees/CFS3.unpruned/OY-1.dtree \
	res/trees/CFS3.unpruned/OY-2.dtree \
	res/trees/CFS3.unpruned/P-0.dtree \
	res/trees/CFS3.unpruned/P-1.dtree \
	res/trees/CFS3.unpruned/P-2.dtree \
	res/trees/CFS3.unpruned/R-0.dtree \
	res/trees/CFS3.unpruned/R-1.dtree \
	res/trees/CFS3.unpruned/R-2.dtree \
	res/trees/CFS3.unpruned/S-0.dtree \
	res/trees/CFS3.unpruned/S-1.dtree \
	res/trees/CFS3.unpruned/S-2.dtree \
	res/trees/CFS3.unpruned/SH-0.dtree \
	res/trees/CFS3.unpruned/SH-1.dtree \
	res/trees/CFS3.unpruned/SH-2.dtree \
	res/trees/CFS3.unpruned/T-0.dtree \
	res/trees/CFS3.unpruned/T-1.dtree \
	res/trees/CFS3.unpruned/T-2.dtree \
	res/trees/CFS3.unpruned/TH-0.dtree \
	res/trees/CFS3.unpruned/TH-1.dtree \
	res/trees/CFS3.unpruned/TH-2.dtree \
	res/trees/CFS3.unpruned/TS-0.dtree \
	res/trees/CFS3.unpruned/TS-1.dtree \
	res/trees/CFS3.unpruned/TS-2.dtree \
	res/trees/CFS3.unpruned/UH-0.dtree \
	res/trees/CFS3.unpruned/UH-1.dtree \
	res/trees/CFS3.unpruned/UH-2.dtree \
	res/trees/CFS3.unpruned/UW-0.dtree \
	res/trees/CFS3.unpruned/UW-1.dtree \
	res/trees/CFS3.unpruned/UW-2.dtree \
	res/trees/CFS3.unpruned/V-0.dtree \
	res/trees/CFS3.unpruned/V-1.dtree \
	res/trees/CFS3.unpruned/V-2.dtree \
	res/trees/CFS3.unpruned/W-0.dtree \
	res/trees/CFS3.unpruned/W-1.dtree \
	res/trees/CFS3.unpruned/W-2.dtree \
	res/trees/CFS3.unpruned/Y-0.dtree \
	res/trees/CFS3.unpruned/Y-1.dtree \
	res/trees/CFS3.unpruned/Y-2.dtree \
	res/trees/CFS3.unpruned/Z-0.dtree \
	res/trees/CFS3.unpruned/Z-1.dtree \
	res/trees/CFS3.unpruned/Z-2.dtree \
	res/trees/CFS3.unpruned/ZH-0.dtree \
	res/trees/CFS3.unpruned/ZH-1.dtree \
	res/trees/CFS3.unpruned/ZH-2.dtree \
	scripts/compare_table.pl \
	scripts/test_bugcase1.pl \
	scripts/test_bugcase2.pl \
	scripts/test_cp_parm.pl \
	scripts/test_init_gau_lda.pl \
	scripts/test_init_gau.pl \
	scripts/testlib.pl \
	scripts/test_make_topology.pl \
	scripts/test_mk_flat.pl \
	scripts/test_mk_mdef_gen.pl \
	scripts/test_norm.pl \
	scripts/test_printp.pl \
	scripts/test_prunetree.pl \
	Testing.Status
