BASEDIRS = \
agg_seg \
bldtree \
bw \
cdcn_norm \
cdcn_train \
cp_parm \
delint \
inc_comp \
init_gau \
init_mixw \
kdtree \
kmeans_init \
make_quests \
map_adapt \
mixw_interp \
mk_flat \
mk_mdef_gen \
mk_mllr_class \
mk_s2sendump \
mk_ts2cb \
mllr_solve \
mllr_transform \
norm \
param_cnt \
printp \
prunetree \
tiestate


if G2P_DECODER
SUBDIRS = $(BASEDIRS) g2p_train g2p_eval 
else 
SUBDIRS = $(BASEDIRS)
endif
