noinst_LTLIBRARIES = libcommon.la

libcommon_la_SOURCES = \
	 acmod_set.c \
	 best_q.c \
	 btree.c \
	 ck_seg.c \
	 cmu6_lts_rules.c \
	 cmu6_lts_rules.h \
	 cvt2triphone.c \
	 dtree.c \
	 enum_subset.c \
	 get_cpu_time.c \
	 get_host_name.c \
	 get_time.c \
	 heap.c \
	 itree.c \
	 lexicon.c \
	 lts.c \
	 Makefile.am \
	 mk_phone_list.c \
	 mk_phone_seq.c \
	 mk_sseq.c \
	 mk_trans_seq.c \
	 mk_ts2ci.c \
	 prefetch.c \
	 prefix_upto.c \
	 profile.c \
	 quest.c \
	 remap.c \
	 state_seq.c \
	 timer.c \
	 ts2cb.c \
	 two_class.c \
	 vector.c \
	 was_added.c

INCLUDES = -I$(top_srcdir)/include

libcommon_la_LIBADD = $(top_builddir)/src/libs/libclust/libclust.la

